src/main/metadata/objects/Test_step1__c.object
<CustomObject>
    <description>PMO: Test Management. Store all test Steps that based on Test Case.（Edition2）</description>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Testable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EP_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when this step is EP related.</description>
        <label>EP Related</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Cases1__c</fullName>
        <label>Test Cases1</label>
        <referenceTo>Test_Cases__c</referenceTo>
        <relationshipLabel>Test steps</relationshipLabel>
        <relationshipName>Test_steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User_role__c</fullName>
        <label>User role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Test step1</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Test_Cases1__c</columns>
        <columns>Expected_Results__c</columns>
        <columns>Actual_Results__c</columns>
        <columns>Description__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Step No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>